--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -366,6 +366,15 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\RKNVR499\\Börlin et al. - 2006 - RSA wear measurements with or without markers in t.pdf}
 }
 
+@article{boulchNeeDropSelfsupervisedShape2021,
+  title = {{{NeeDrop}}: {{Self-supervised Shape Representation}} from {{Sparse Point Clouds}} Using {{Needle Dropping}}},
+  author = {Boulch, Alexandre and Langlois, Pierre-Alain and Puy, Gilles and Marlet, Renaud},
+  year = {2021},
+  journal = {arXiv: Computer Vision and Pattern Recognition},
+  abstract = {There has been recently a growing interest for implicit shape representations. Contrary to explicit representations, they have no resolution limitations and they easily deal with a wide variety of surface topologies. To learn these implicit representations, current approaches rely on a certain level of shape supervision (e.g., inside/outside information or distance-to-shape knowledge), or at least require a dense point cloud (to approximate well enough the distance-to-shape). In contrast, we introduce \{\textbackslash method\}, an self-supervised method for learning shape representations from possibly extremely sparse point clouds. Like in Buffon's needle problem, we "drop" (sample) needles on the point cloud and consider that, statistically, close to the surface, the needle end points lie on opposite sides of the surface. No shape knowledge is required and the point cloud can be highly sparse, e.g., as lidar point clouds acquired by vehicles. Previous self-supervised shape representation approaches fail to produce good-quality results on this kind of data. We obtain quantitative results on par with existing supervised approaches on shape reconstruction datasets and show promising qualitative results on hard autonomous driving datasets such as KITTI.},
+  annotation = {MAG ID: 3215258583}
+}
+
 @article{bournePatientSatisfactionTotal2010,
   title = {Patient {{Satisfaction}} after {{Total Knee Arthroplasty}}: {{Who}} Is {{Satisfied}} and {{Who}} Is {{Not}}?},
   shorttitle = {Patient {{Satisfaction}} after {{Total Knee Arthroplasty}}},
@@ -572,6 +581,15 @@
   langid = {english},
   keywords = {✅,Biplane Imaging,Cadaver,Elbow,Elbow Kinematics,Invasive},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\JAEXBZAP\\Morrey - THREE-DIMENSIONAL ROTATION OF THE.pdf}
+}
+
+@article{chenIntrinsicExtrinsicPreservedGANs2021,
+  title = {Intrinsic-{{Extrinsic Preserved GANs}} for {{Unsupervised 3D Pose Transfer}}.},
+  author = {Chen, Haoyu and Tang, Hao and Shi, Henglin and Peng, Wei and Sebe, Nicu and {Guoying Zhao} and Zhao, Guoying},
+  year = {2021},
+  journal = {arXiv: Computer Vision and Pattern Recognition},
+  abstract = {With the strength of deep generative models, 3D pose transfer regains intensive research interests in recent years. Existing methods mainly rely on a variety of constraints to achieve the pose transfer over 3D meshes, e.g., the need for manually encoding for shape and pose disentanglement. In this paper, we present an unsupervised approach to conduct the pose transfer between any arbitrate given 3D meshes. Specifically, a novel Intrinsic-Extrinsic Preserved Generative Adversarial Network (IEP-GAN) is presented for both intrinsic (i.e., shape) and extrinsic (i.e., pose) information preservation. Extrinsically, we propose a co-occurrence discriminator to capture the structural/pose invariance from distinct Laplacians of the mesh. Meanwhile, intrinsically, a local intrinsic-preserved loss is introduced to preserve the geodesic priors while avoiding heavy computations. At last, we show the possibility of using IEP-GAN to manipulate 3D human meshes in various ways, including pose transfer, identity swapping and pose interpolation with latent code vector arithmetic. The extensive experiments on various 3D datasets of humans, animals and hands qualitatively and quantitatively demonstrate the generality of our approach. Our proposed model produces better results and is substantially more efficient compared to recent state-of-the-art methods. Code is available: https://github.com/mikecheninoulu/Unsupervised\_IEPGAN},
+  annotation = {MAG ID: 3204862792}
 }
 
 @article{chrisharrisCOMBINEDCORNEREDGE1988,
@@ -1070,6 +1088,15 @@
   pmid = {8550644},
   keywords = {📥},
   annotation = {MAG ID: 1993123013}
+}
+
+@article{ghorbaniSOMASolvingOptical2021,
+  title = {{{SOMA}}: {{Solving Optical Marker-Based MoCap Automatically}}},
+  author = {Ghorbani, Nima and Black, Michael J. and {Michael J. Black}},
+  year = {2021},
+  journal = {arXiv: Computer Vision and Pattern Recognition},
+  abstract = {Marker-based optical motion capture (mocap) is the "gold standard" method for acquiring accurate 3D human motion in computer vision, medicine, and graphics. The raw output of these systems are noisy and incomplete 3D points or short tracklets of points. To be useful, one must associate these points with corresponding markers on the captured subject; i.e. "labelling". Given these labels, one can then "solve" for the 3D skeleton or body surface mesh. Commercial auto-labeling tools require a specific calibration procedure at capture time, which is not possible for archival data. Here we train a novel neural network called SOMA, which takes raw mocap point clouds with varying numbers of points, labels them at scale without any calibration data, independent of the capture technology, and requiring only minimal human intervention. Our key insight is that, while labeling point clouds is highly ambiguous, the 3D body provides strong constraints on the solution that can be exploited by a learning-based method. To enable learning, we generate massive training sets of simulated noisy and ground truth mocap markers animated by 3D bodies from AMASS. SOMA exploits an architecture with stacked self-attention elements to learn the spatial structure of the 3D body and an optimal transport layer to constrain the assignment (labeling) problem while rejecting outliers. We extensively evaluate SOMA both quantitatively and qualitatively. SOMA is more accurate and robust than existing state of the art research methods and can be applied where commercial systems cannot. We automatically label over 8 hours of archival mocap data across 4 different datasets captured using various technologies and output SMPL-X body models. The model and data is released for research purposes at https://soma.is.tue.mpg.de/.},
+  annotation = {MAG ID: 3205204793}
 }
 
 @article{giphartAccuracyContourbasedBiplane2012,
@@ -1950,6 +1977,21 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\C3YPVNXK\\MacIntyre et al. - 2006 - Patellofemoral Joint Kinematics in Individuals wit.pdf}
 }
 
+@article{maharajModellingComplexityFoot2021,
+  title = {Modelling the Complexity of the Foot and Ankle during Human Locomotion: The Development and Validation of a Multi-Segment Foot Model Using Biplanar Videoradiography},
+  shorttitle = {Modelling the Complexity of the Foot and Ankle during Human Locomotion},
+  author = {Maharaj, Jayishni N. and Rainbow, Michael J. and Cresswell, Andrew G. and Kessler, Sarah and Konow, Nicolai and Gehring, Dominic and Lichtwark, Glen A.},
+  year = {2021},
+  month = oct,
+  journal = {Computer Methods in Biomechanics and Biomedical Engineering},
+  pages = {1--12},
+  issn = {1025-5842, 1476-8259},
+  doi = {10.1080/10255842.2021.1968844},
+  abstract = {We developed and validated a multi-segment foot and ankle model for human walking and running. The model has 6-segments, and 7 degrees of freedom; motion between foot segments were constrained with a single oblique axis to enable triplanar motion [Joint Constrained (JC) model]. The accuracy of the JC model and that of a conventional model using a 6 degrees of freedom approach were assessed by comparison to segment motion determined with biplanar videoradiography. Compared to the 6-DoF model, our JC model demonstrated significantly smaller RMS differences [JC: 2.19  (1.43\textendash 2.73); 6-DoF: 3.25  (1.37\textendash 5.89)] across walking and running. The JC model is thus capable of more accurate musculoskeletal analyses and is also well suited for predictive simulations.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\PIT9X8JX\\Maharaj et al. - 2021 - Modelling the complexity of the foot and ankle dur.pdf}
+}
+
 @article{mahfouzEffectSegmentationErrors2005,
   title = {Effect of Segmentation Errors on {{3D-to-2D}} Registration of Implant Models in {{X-ray}} Images},
   author = {Mahfouz, Mohamed R. and Hoff, William A and Komistek, Richard D. and Dennis, Douglas A.},
@@ -2493,6 +2535,15 @@
   langid = {english},
   keywords = {Computer Science - Computer Vision and Pattern Recognition},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\PCCPJJFS\\Qi et al. - 2017 - PointNet Deep Learning on Point Sets for 3D Class.pdf}
+}
+
+@article{qiuPUTransformerPointCloud2021,
+  title = {{{PU-Transformer}}: {{Point Cloud Upsampling Transformer}}.},
+  author = {Qiu, Shi and Anwar, Saeed and Barnes, Nick},
+  year = {2021},
+  journal = {arXiv: Computer Vision and Pattern Recognition},
+  abstract = {Given the rapid development of 3D scanners, point clouds are becoming popular in AI-driven machines. However, point cloud data is inherently sparse and irregular, causing major difficulties for machine perception. In this work, we focus on the point cloud upsampling task that intends to generate dense high-fidelity point clouds from sparse input data. Specifically, to activate the transformer's strong capability in representing features, we develop a new variant of a multi-head self-attention structure to enhance both point-wise and channel-wise relations of the feature map. In addition, we leverage a positional fusion block to comprehensively capture the local context of point cloud data, providing more position-related information about the scattered points. As the first transformer model introduced for point cloud upsampling, we demonstrate the outstanding performance of our approach by comparing with the state-of-the-art CNN-based methods on different benchmarks quantitatively and qualitatively.},
+  annotation = {MAG ID: 3215788501}
 }
 
 @article{ranawatVivoKinematicsFixed2004,
@@ -3395,6 +3446,16 @@
   langid = {english},
   keywords = {✅,Extremity,Hip,Knee,OA,Osteoarthritis},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KRTW7GRV\\Zhang and Jordan - 2010 - Epidemiology of Osteoarthritis.pdf;C\:\\Users\\andre\\Documents\\GitHub\\Andrew-s-Vault\\3. Resources\\Literature Notes\\@zhangEpidemiologyOsteoarthritis2010.md}
+}
+
+@article{zhangGraphPBNGraphbasedParallel2021,
+  title = {Graph-{{PBN}}: {{Graph-based Parallel Branch Network}} for {{Efficient Point Cloud Learning}}},
+  author = {Zhang, Cheng and {Hao Chen} and Wan, Haocheng and {Ping Yang} and {Zizhao Wu}},
+  year = {2021},
+  journal = {Graphical Models \textbackslash/graphical Models and Image Processing \textbackslash/computer Vision, Graphics, and Image Processing},
+  doi = {10.1016/j.gmod.2021.101120},
+  abstract = {Abstract   In recent years, approaches based on graph convolutional networks (GCNs) have achieved state-of-the-art performance in point cloud learning. The typical pipeline of GCNs is modeled as a two-stage learning process: graph construction and feature learning. We argue that such process exhibits low efciency because a high percentage of the total time is consumed during the graph construction process when a large amount of sparse data are required to be accessed rather than on actual feature learning. To alleviate this problem, we propose a graph-based parallel branch network (Graph-PBN) that introduces a parallel branch structure to point cloud learning in this study. In particular, Graph-PBN is composed of two branches: the PointNet branch and the GCN branch. PointNet exhibits advantages in memory access and computational cost, while GCN behaves better in local context modeling. The two branches are combined in our architecture to utilize the potential of PointNet and GCN fully, facilitating the achievement of efcient and accurate recognition results. To better aggregate the features of each node in GCN, we investigate a novel operator, called EAGConv, to augment their local context by fully utilizing geometric and semantic features in a local graph. We conduct experiments on several benchmark datasets, and experiment results validate the signicant performance of our method compared with other state-of-the-art approaches. Our code will be made publicly available at  https://github.com/zhangcheng828/Graph-PBN .},
+  annotation = {MAG ID: 3213955018}
 }
 
 @article{zhuAccuracyRepeatabilityAutomatic2012,
