--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -621,6 +621,31 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\X9RNC5E5\\Cohen et al_2017_EMNIST.pdf}
 }
 
+@article{cootesActiveShapeModels1992,
+  title = {Active {{Shape Models}} - `{{Smart Snakes}}'},
+  author = {Cootes, T F and Taylor, C J},
+  year = {1992},
+  pages = {10},
+  abstract = {We describe `Active Shape Models' which iteratively adapt to refine esti mates of the pose, scale and shape of models of image objects. The method uses flexible models derived from sets of training examples. These models, known as Point Distribution Models, represent objects as sets of labelled points. An initial estimate of the location of the model points in an image is improved by attempting to move each point to a better position nearby. Adjustments to the pose variables and shape para meters are calculated. Limits are placed on the shape parameters ensur ing that the example can only deform into shapes conforming to global constraints imposed by the training set. An iterative procedure deforms the model example to find the best fit to the image object. Results of ap plying the method are described. The technique is shown to be a powerful method for refining estimates of object shape and location.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KCHFNRCD\\Cootes and Taylor - Active Shape Models - ‘Smart Snakes’.pdf}
+}
+
+@article{cootesActiveShapeModelsTheir1995,
+  title = {Active {{Shape Models-Their Training}} and {{Application}}},
+  author = {Cootes, T.F. and Taylor, C.J. and Cooper, D.H. and Graham, J.},
+  year = {1995},
+  month = jan,
+  journal = {Computer Vision and Image Understanding},
+  volume = {61},
+  number = {1},
+  pages = {38--59},
+  issn = {10773142},
+  doi = {10.1006/cviu.1995.1004},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\EPW76RD2\\Cootes 1994 - Training Active Contours.pdf}
+}
+
 @book{corkeRoboticsVisionControl2017,
   title = {Robotics, {{Vision}} and {{Control}}},
   author = {Corke, Peter},
@@ -659,16 +684,6 @@
   keywords = {📥,Biplane Imaging,Computer Vision,Stereo},
   annotation = {MAG ID: 1995756857},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\VG273PJG\\D. Marr_Tomaso Poggio_1979_A Computational Theory of Human Stereo Vision.pdf}
-}
-
-@article{d.marrEarlyProcessingVisual1976,
-  title = {Early Processing of Visual Information},
-  author = {{D. Marr}},
-  year = {1976},
-  abstract = {An introduction is given to a theory of early visual information processing. The theory has been implemented, and examples are given of images at various stages of analysis. It is argued that the first step of consequence is to compute a primitive but rich description of the grey-level changes present in an image. The description is expressed in a vocabulary of kinds of intensity change (EDGE, SHADING-EDGE, EXTENDED-EDGE, LINE, BLOB etc.). Modifying parameters are bound to the elements in the description, specifying their POSITION, ORIENTATION, TERMINATION points, CONTRAST, SIZE and FUZZINESS. This description is obtained from the intensity array by fixed techniques, and it is called the primal sketch. For most images, the primal sketch is large and unwieldy. The second important step in visual information processing is to group its contents in a way that is appropriate for later recognition. From our ability to interpret drawings with little semantic content, one may infer the presence in our perceptual equipment of symbolic processes that can define 'placetokens' in an image in various ways, and can group them according to certain rules. Homomorphic techniques fail to account for many of these grouping phenomena, whose explanations require mechanisms of construction rather than mechanisms of detection. The necessary grouping of elements in the primal sketch may be achieved by a mechanism that has available the processes inferred from above, together with the ability to select items by first order discriminations acting on the elements' parameters. Only occasionally do these mechanisms use downward-flowing information about the contents of the particular image being processed. It is argued that 'non-attentive' vision is in practice implemented by these grouping operations and first order discriminations acting on the primal sketch. The class of computations so obtained differs slightly from the class of second order operations on the intensity array. The extraction of a form from the primal sketch using these techniques amounts to the separation of figure from ground. It is concluded that most of the separation can be carried out by using techniques that do not depend upon the particular image in question. Therefore, figure-ground separation can normally precede the description of the shape of the extracted form. Up to this point, higher-level knowledge and purpose are brought to bear on only a few of the decisions taken during the processing. This relegates the widespread use of downward-flowing information to a later stage than is found in current machine-vision programs, and implies that such knowledge should influence the control of, rather than interfering with, the actual data-processing that is taking place lower down.},
-  pmid = {12519},
-  keywords = {📥},
-  annotation = {MAG ID: 2130355536}
 }
 
 @article{d.marrTheoryEdgeDetection1980,
@@ -2096,6 +2111,16 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\HD5KU8UM\\Markelj et al. - 2012 - A review of 3D2D registration methods for image-g.pdf}
 }
 
+@article{marrEarlyProcessingVisual1976,
+  title = {Early Processing of Visual Information},
+  author = {Marr, D.},
+  year = {1976},
+  abstract = {An introduction is given to a theory of early visual information processing. The theory has been implemented, and examples are given of images at various stages of analysis. It is argued that the first step of consequence is to compute a primitive but rich description of the grey-level changes present in an image. The description is expressed in a vocabulary of kinds of intensity change (EDGE, SHADING-EDGE, EXTENDED-EDGE, LINE, BLOB etc.). Modifying parameters are bound to the elements in the description, specifying their POSITION, ORIENTATION, TERMINATION points, CONTRAST, SIZE and FUZZINESS. This description is obtained from the intensity array by fixed techniques, and it is called the primal sketch. For most images, the primal sketch is large and unwieldy. The second important step in visual information processing is to group its contents in a way that is appropriate for later recognition. From our ability to interpret drawings with little semantic content, one may infer the presence in our perceptual equipment of symbolic processes that can define 'placetokens' in an image in various ways, and can group them according to certain rules. Homomorphic techniques fail to account for many of these grouping phenomena, whose explanations require mechanisms of construction rather than mechanisms of detection. The necessary grouping of elements in the primal sketch may be achieved by a mechanism that has available the processes inferred from above, together with the ability to select items by first order discriminations acting on the elements' parameters. Only occasionally do these mechanisms use downward-flowing information about the contents of the particular image being processed. It is argued that 'non-attentive' vision is in practice implemented by these grouping operations and first order discriminations acting on the primal sketch. The class of computations so obtained differs slightly from the class of second order operations on the intensity array. The extraction of a form from the primal sketch using these techniques amounts to the separation of figure from ground. It is concluded that most of the separation can be carried out by using techniques that do not depend upon the particular image in question. Therefore, figure-ground separation can normally precede the description of the shape of the extracted form. Up to this point, higher-level knowledge and purpose are brought to bear on only a few of the decisions taken during the processing. This relegates the widespread use of downward-flowing information to a later stage than is found in current machine-vision programs, and implies that such knowledge should influence the control of, rather than interfering with, the actual data-processing that is taking place lower down.},
+  pmid = {12519},
+  keywords = {📥},
+  annotation = {MAG ID: 2130355536}
+}
+
 @article{martinModelBasedTrackingHip2011,
   title = {Model-{{Based Tracking}} of the {{Hip}}: {{Implications}} for {{Novel Analyses}} of {{Hip Pathology}}},
   shorttitle = {Model-{{Based Tracking}} of the {{Hip}}},
@@ -2510,6 +2535,15 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\RVYNPKL9\\Prins et al. - 2008 - Handling modular hip implants in model-based RSA .pdf}
+}
+
+@article{qiaoEdgeExtractionMethod2022,
+  title = {Edge Extraction Method for Medical Images Based on Improved Local Binary Pattern Combined with Edge-Aware Filtering},
+  author = {Qiao, Shuang and {Qinghan Yu} and {Zhengwei Zhao} and {Liying Song} and {Hui Tao} and {Tian Zhang} and Zhao, Chenyi},
+  year = {2022},
+  journal = {Biomedical Signal Processing and Control},
+  doi = {10.1016/j.bspc.2022.103490},
+  annotation = {MAG ID: 4206548803}
 }
 
 @article{qiPointNetDeepHierarchical2017,
