--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -80,8 +80,8 @@
 
 
 
-\include{./src/ch1-introduction}
-\include{./src/ch2-proposal}
+\include{./src/ch1-lit_review}
+\include{./src/chX-jtml}
 
 
 \chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
