--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -354,6 +354,17 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\U66ZT69X\\Bingham and Li - 2006 - An Optimized Image Matching Method for Determining.pdf}
 }
 
+@misc{BMUSBurdenMusculoskeletal,
+  title = {{{BMUS}}: {{The Burden}} of {{Musculoskeletal Diseases}} in the {{United States}}},
+  shorttitle = {{{BMUS}}},
+  journal = {BMUS: The Burden of Musculoskeletal Diseases in the United States},
+  abstract = {Prevalence, Societal and Economic Cost},
+  howpublished = {https://www.boneandjointburden.org/},
+  langid = {english},
+  keywords = {✅,Musculoskeletal Burden},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\2DN6UBE9\\www.boneandjointburden.org.html}
+}
+
 @article{bobrowitschEvaluation3DObject2007,
   title = {Evaluation of a {{3D}} Object Registration Method for Analysis of Humeral Kinematics},
   author = {Bobrowitsch, Evgenij and Imhauser, Carl and Graichen, Heiko and D{\"u}rselen, Lutz},
@@ -913,6 +924,20 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\EMKM2U6A\\Enloe et al. - 1996 - Total Hip and Knee Replacement Treatment Programs.pdf}
+}
+
+@book{euclidesEuclidElementsGeometry2008,
+  title = {Euclid's Elements of Geometry: The {{Greek}} Text of {{J}}.{{L}}. {{Heiberg}} (1883 - 1885): From {{Euclidis Elementa}}, Edidit et {{Latine}} Interpretatus Est {{I}}.{{L}}. {{Heiberg}}, in Aedibus {{B}}.{{G}}. {{Teubneri}}, 1883-1885},
+  shorttitle = {Euclid's Elements of Geometry},
+  author = {Euclides},
+  editor = {Fitzpatrick, Richard},
+  translator = {Fitzpatrick, Richard},
+  year = {2008},
+  edition = {Revised and corrected},
+  publisher = {{s.n}},
+  address = {{s.l}},
+  isbn = {978-0-615-17984-1},
+  langid = {english}
 }
 
 @article{fantozziFemoralRollbackCruciateretaining2006,
@@ -2664,18 +2689,6 @@
   abstract = {Total hip and total knee arthroplasty both provide a considerable improvement in quality of life, but there is no evidence to suggest that one is more successful than the other. We studied 72 patients in a prospective trial before and after total hip or total knee replacement. We recorded scores for disability and distress derived from the Harris hip score and the British Orthopaedic Association knee assessment score, and used them to generate quality of life (QoL) scores using the Rosser Index Matrix immediately before and at one year after surgery.             The patients awaiting knee replacement had significantly lower QoL scores than those awaiting hip replacement (p = 0.011). The QoL scores at one year were high and almost identical for both groups (p = 0.46). Further analysis showed that gender and weight were not significant predictors of improvement of QoL scores, but age (p = 0.03) and whether the hip or knee was replaced (p = 0.006) were significant factors.},
   langid = {english},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\LELUZGBP\\Norman-Taylor et al. - 1996 - QUALITY-OF-LIFE IMPROVEMENT COMPARED AFTER HIP AND.pdf}
-}
-
-@misc{nullBMUSBurdenMusculoskeletal,
-  title = {{{BMUS}}: {{The Burden}} of {{Musculoskeletal Diseases}} in the {{United States}}},
-  shorttitle = {{{BMUS}}},
-  author = {{null}},
-  journal = {BMUS: The Burden of Musculoskeletal Diseases in the United States},
-  abstract = {Prevalence, Societal and Economic Cost},
-  howpublished = {https://www.boneandjointburden.org/},
-  langid = {english},
-  keywords = {✅,Musculoskeletal Burden},
-  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\2DN6UBE9\\www.boneandjointburden.org.html}
 }
 
 @article{oakeshottKinematicAnalysisPosterior2003,
