--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1,4 +1,3 @@
-
 @article{abebeEffectsFemoralGraft2011,
   ids = {abebeEffectsFemoralGraft2011a},
   title = {The Effects of Femoral Graft Placement on in Vivo Knee Kinematics after Anterior Cruciate Ligament Reconstruction},
@@ -777,7 +776,7 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\M5R7WJL7\\Corke_2017_Robotics, Vision and Control.pdf}
 }
 
-@article{daemsValidationThreedimensionalTotal2016a,
+@article{daemsValidationThreedimensionalTotal2016,
   title = {Validation of Three-Dimensional Total Knee Replacement Kinematics Measurement Using Single-Plane Fluoroscopy},
   author = {Daems, R. and Victor, Jan and De Baets, Patrick and Van Onsem, S. and Verstraete, Matthias},
   year = {2016},
@@ -1552,6 +1551,22 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\7X2MCM8N\\Ishii et al. - 2007 - Effect of knee laxity on in vivo kinematics of men.pdf}
 }
 
+@article{ivesterReconfigurableHighSpeedStereoRadiography2015,
+  title = {A {{Reconfigurable High-Speed Stereo-Radiography System}} for {{Sub-Millimeter Measurement}} of {{In Vivo Joint Kinematics}}},
+  author = {Ivester, John C. and Cyr, Adam J. and Harris, Michael D. and Kulis, Martin J. and Rullkoetter, Paul J. and Shelburne, Kevin B.},
+  year = {2015},
+  month = dec,
+  journal = {Journal of Medical Devices},
+  volume = {9},
+  number = {4},
+  pages = {041009},
+  issn = {1932-6181, 1932-619X},
+  doi = {10.1115/1.4030778},
+  abstract = {Relative motions within normal and pathological joints of the human body can occur on the sub-millimeter and sub-degree scale. Dynamic radiography can be used to create a rapid sequence of images from which measurements of bone motion can be extracted, but available systems have limited speed and accuracy, limit normal subject movement, and do not easily integrate into existing traditional motion capture laboratories. A high-speed stereo radiography (HSSR) system is described that addresses these limitations. The custom radiography system was placed on a standalone reconfigurable gantry structure designed to allow freedom of subject movement while integrating into an existing motion capture laboratory. Validation of the system and measurement of knee kinematics of subjects during gait confirmed the ability to record joint motion with high accuracy and high-speed.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\CLH7WPX5\\Ivester et al. - 2015 - A Reconfigurable High-Speed Stereo-Radiography Sys.pdf}
+}
+
 @article{jaccardDistributionFloraAlpine1912,
   title = {The {{Distribution}} of the {{Flora}} in the {{Alpine Zone}}},
   author = {Jaccard, Paul},
@@ -2094,6 +2109,20 @@
   keywords = {📥}
 }
 
+@article{levenbergMethodSolutionCertain1944,
+  title = {A Method for the Solution of Certain Non-Linear Problems in Least Squares},
+  author = {Levenberg, Kenneth},
+  year = {1944},
+  journal = {Quarterly of Applied Mathematics},
+  volume = {2},
+  number = {2},
+  pages = {164--168},
+  issn = {0033-569X, 1552-4485},
+  doi = {10.1090/qam/10666},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\NMPSX3M5\\Levenberg - 1944 - A method for the solution of certain non-linear pr.pdf}
+}
+
 @article{liAnteriorCruciateLigament2006,
   title = {Anterior {{Cruciate Ligament Deficiency Alters}} the {{In Vivo Motion}} of the {{Tibiofemoral Cartilage Contact Points}} in {{Both}} the {{Anteroposterior}} and {{Mediolateral Directions}}:},
   shorttitle = {Anterior {{Cruciate Ligament Deficiency Alters}} the {{In Vivo Motion}} of the {{Tibiofemoral Cartilage Contact Points}} in {{Both}} the {{Anteroposterior}} and {{Mediolateral Directions}}},
@@ -2394,6 +2423,21 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\HD5KU8UM\\Markelj et al. - 2012 - A review of 3D2D registration methods for image-g.pdf}
+}
+
+@article{marquardtAlgorithmLeastSquaresEstimation1963,
+  title = {An {{Algorithm}} for {{Least-Squares Estimation}} of {{Nonlinear Parameters}}},
+  author = {Marquardt, Donald W.},
+  year = {1963},
+  month = jun,
+  journal = {Journal of the Society for Industrial and Applied Mathematics},
+  volume = {11},
+  number = {2},
+  pages = {431--441},
+  issn = {0368-4245, 2168-3484},
+  doi = {10.1137/0111030},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\PASBP2XV\\Marquardt - 1963 - An Algorithm for Least-Squares Estimation of Nonli.pdf}
 }
 
 @article{marrComputationalTheoryHuman1979,
@@ -3596,6 +3640,37 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\ZEYLZDLA\\Tian et al. - 2018 - DeepTest automated testing of deep-neural-network.pdf}
 }
 
+@article{tibshiraniLassoProblemUniqueness2013,
+  title = {The Lasso Problem and Uniqueness},
+  author = {Tibshirani, Ryan J.},
+  year = {2013},
+  month = jan,
+  journal = {Electronic Journal of Statistics},
+  volume = {7},
+  number = {none},
+  issn = {1935-7524},
+  doi = {10.1214/13-EJS815},
+  abstract = {The lasso is a popular tool for sparse linear regression, especially for problems in which the number of variables p exceeds the number of observations n. But when p {$>$} n, the lasso criterion is not strictly convex, and hence it may not have a unique minimizer. An important question is: when is the lasso solution well-defined (unique)? We review results from the literature, which show that if the predictor variables are drawn from a continuous probability distribution, then there is a unique lasso solution with probability one, regardless of the sizes of n and p. We also show that this result extends easily to 1 penalized minimization problems over a wide range of loss functions.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\DCAYXLAT\\Tibshirani - 2013 - The lasso problem and uniqueness.pdf}
+}
+
+@article{tibshiraniRegressionShrinkageSelection1996,
+  title = {Regression {{Shrinkage}} and {{Selection Via}} the {{Lasso}}},
+  author = {Tibshirani, Robert},
+  year = {1996},
+  month = jan,
+  journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume = {58},
+  number = {1},
+  pages = {267--288},
+  issn = {00359246},
+  doi = {10.1111/j.2517-6161.1996.tb02080.x},
+  abstract = {We propose a new method for estimation in linear models. The 'lasso' minim residual sum of squares subject to the sum of the absolute value of the coefficients than a constant. Because of the nature of this constraint it tends to produce coefficients that are exactly 0 and hence gives interpretable models. Our simulatio suggest that the lasso enjoys some of the favourable properties of both subset sele ridge regression. It produces interpretable models like subset selection and exh stability of ridge regression. There is also an interesting relationship with recent adaptive function estimation by Donoho and Johnstone. The lasso idea is quite ge can be applied in a variety of statistical models: extensions to generalized regressio and tree-based models are briefly described.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\T3U6SKDB\\Tibshirani - 1996 - Regression Shrinkage and Selection Via the Lasso.pdf}
+}
+
 @article{torryHighKneeValgus2013,
   title = {High Knee Valgus in Female Subjects Does Not Yield Higher Knee Translations during Drop Landings: {{A}} Biplane Fluoroscopic Study: {{KNEE TRANSLATIONS IN FEMALE VALGUS LANDINGS}}},
   shorttitle = {High Knee Valgus in Female Subjects Does Not Yield Higher Knee Translations during Drop Landings},
@@ -3781,7 +3856,7 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\SLGXED9S\\Watanabe et al. - 2016 - In-vivo kinematics of high-flex posterior-stabiliz.pdf}
 }
 
-@article{watanabeKneeKinematicsAnterior2013a,
+@article{watanabeKneeKinematicsAnterior2013,
   title = {Knee {{Kinematics}} in {{Anterior Cruciate Ligament-Substituting Arthroplasty With}} or {{Without}} the {{Posterior Cruciate Ligament}}},
   author = {Watanabe, Toshifumi and Ishizuki, Masafumi and Muneta, Takeshi and Banks, Scott A.},
   year = {2013},
@@ -4147,5 +4222,4 @@
   keywords = {✅,Computer Vision,Coordinate Transformation,Distance Maps,fluoroscopy,Kinematics,Knee,Model Based,Model Image Registration,Perspective Projection,Pose Estimation,Single Plane,Total Knee Arthroplasty},
   file = {C\:\\Users\\ajensen123\\Desktop\\Andrew's Vault\\3. Resources\\Literature Notes\\@zuffiModelbasedMethodReconstruction1999.md;C\:\\Users\\ajensen123\\Zotero\\storage\\SQ2IBGEX\\Zuffi et al. - 1999 - A model-based method for the reconstruction of tot.pdf;C\:\\Users\\ajensen123\\Zotero\\storage\\U96R49XT\\Zuffi et al. - 1999 - A model-based method for the reconstruction of tot.pdf}
 }
-
 
