--- a/src/ch1-lit_review.tex
+++ b/src/ch1-lit_review.tex
@@ -1,7 +1,6 @@
 \chapter{Introduction}
 
-This is the introduction to the literature review that I am going to write
 
-\begin{equation}
-    \frac{hello}{goodbye}
-\end{equation}
+
+\section{Historical Methods of Measuring Kinematics}
+Many methods of measuring kinematics are either too time consuming, or require human effort to get accurate results or ``help'' the optimizer get the right value. Broadly, we can break these up into two classes. Hello
