--- a/src/acknowledgementsFile.tex
+++ b/src/acknowledgementsFile.tex
@@ -1,4 +1,5 @@
-This is the acknowledgments tex file, which should have been set in the main file using the command \verb|\setAcknowledgementsFile{Drive:/file/location/acknowledgementsFile}|.
+First, I would like to thank my parents for their continued support throughout my undergraduate and graduate studies. They fostered my work ethic and drive to get through something as ambitious as a doctorate.
 
-Keep in mind this should be written in first person, eg;
-``I thank my chair for his patience with my random tangents and endless questions and his subsequent (and often lengthy) explanations. I especially appreciate him refraining from voicing how dumb some of those questions were, despite me feeling like a moron nonetheless."
+Secondly, I would like to thank my advisor, Scott Banks. He has truly been something of a second dad to me as I navigate through graduate school and my future career. Though most conversations seem to revolve around either beer, music, or hiking, we seem to have gotten quite a lot done.
+
+Third, I would like to thank my Fiancee, Lauren. Though busy with medical school, she still takes the time to understand my research and offer support outside of academics.
