added image similarity metricvs

--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -267,6 +267,22 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\TZNRKSDY\\Bendat_Piersol_2010_Random data.pdf}
 }
 
+@book{bendatRandomDataAnalysis2010a,
+  title = {Random Data: Analysis and Measurement Procedures},
+  shorttitle = {Random Data},
+  author = {Bendat, Julius S. and Piersol, Allan G.},
+  year = {2010},
+  series = {Wiley Series in Probability and Statistics},
+  edition = {4th ed},
+  publisher = {{Wiley}},
+  address = {{Hoboken, N.J}},
+  isbn = {978-0-470-24877-5},
+  langid = {english},
+  lccn = {TA340 .B43 2010},
+  keywords = {Data processing,Engineering,Statistical methods,Stochastic processes},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\UCTH6VUR\\Bendat and Piersol - 2010 - Random data analysis and measurement procedures.pdf}
+}
+
 @article{benzComparisonPatientsThree2015,
   title = {Comparison of Patients in Three Different Rehabilitation Settings after Knee or Hip Arthroplasty: A Natural Observational, Prospective Study},
   shorttitle = {Comparison of Patients in Three Different Rehabilitation Settings after Knee or Hip Arthroplasty},
@@ -1194,6 +1210,20 @@
   file = {C\:\\Users\\ajensen123\\Desktop\\Andrew's Vault\\200 Literature\\Notes\\@freglyComputationalWearPrediction2005.md;C\:\\Users\\ajensen123\\Desktop\\Andrew's Vault\\200 Literature\\Notes\\@freglyComputationalWearPrediction2005.md;C\:\\Users\\ajensen123\\Zotero\\storage\\BGYPMMRF\\Fregly et al. - 2005 - Computational wear prediction of a total knee repl.pdf}
 }
 
+@book{friedbergLinearAlgebra2003,
+  title = {Linear Algebra},
+  author = {Friedberg, Stephen H. and Insel, Arnold J. and Spence, Lawrence E.},
+  year = {2003},
+  edition = {4th ed},
+  publisher = {{Pearson Education}},
+  address = {{Upper Saddle River, N.J}},
+  isbn = {978-0-13-008451-4},
+  langid = {english},
+  lccn = {QA184.2 .F75 2003},
+  keywords = {Algebras; Linear},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\FWFECRMJ\\Friedberg et al. - 2003 - Linear algebra.pdf}
+}
+
 @article{gaoInvestigationSoftTissue2008,
   title = {Investigation of Soft Tissue Movement during Level Walking: {{Translations}} and Rotations of Skin Markers},
   shorttitle = {Investigation of Soft Tissue Movement during Level Walking},
@@ -1325,6 +1355,22 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\S259TCVS\\Giphart - 2012 - Accuracy of a contour-based biplane fluoroscopy te.pdf}
 }
 
+@book{golubMatrixComputations2013,
+  title = {Matrix Computations},
+  author = {Golub, Gene H. and Van Loan, Charles F.},
+  year = {2013},
+  series = {Johns {{Hopkins}} Studies in the Mathematical Sciences},
+  edition = {Fourth edition},
+  publisher = {{The Johns Hopkins University Press}},
+  address = {{Baltimore}},
+  isbn = {978-1-4214-0794-4},
+  langid = {english},
+  lccn = {QA188 .G65 2013},
+  keywords = {Data processing,Matrices},
+  annotation = {OCLC: ocn824733531},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\NVUP5586\\golub-loan_matrix-computations.pdf}
+}
+
 @article{goodfellowGenerativeAdversarialNets,
   title = {Generative {{Adversarial Nets}}},
   author = {Goodfellow, Ian and {Pouget-Abadie}, Jean and Mirza, Mehdi and Xu, Bing and {Warde-Farley}, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
@@ -1356,6 +1402,15 @@
   pmid = {32750799},
   annotation = {MAG ID: 3039448353},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\YU6S6CEN\\Guo et al_2020_Deep Learning for 3D Point Clouds.pdf}
+}
+
+@phdthesis{hannahComputerMatchingAreas1977,
+  title = {Computer {{Matching}} of {{Areas}} in {{Stereo IMages}}},
+  author = {Hannah, Marsha Jo},
+  year = {1977},
+  langid = {english},
+  school = {Stanford University},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\E2CFKXBL\\Arbor - Xerox University Microfilms.pdf}
 }
 
 @article{hansonVivoAnteriorTibial2007,
@@ -1726,6 +1781,22 @@
   langid = {english},
   keywords = {📥,DIRECT-JTA,Dividing Rectangles,Global Minimum,Global Optimization,Lipschitz Constant,Lipschitzian Optimization,Optimization},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\FUZZH4HI\\Donald R. Jones et al_1993_Lipschitzian optimization without the Lipschitz constant.pdf;C\:\\Users\\ajensen123\\Zotero\\storage\\GK56P672\\Jones et al. - 1993 - Lipschitzian optimization without the Lipschitz co.pdf;C\:\\Users\\ajensen123\\Zotero\\storage\\WDIY3RKG\\Jones et al. - 1993 - Lipschitzian optimization without the Lipschitz co.pdf}
+}
+
+@article{kanadeStereoMatchingAlgorithm1994,
+  title = {A Stereo Matching Algorithm with an Adaptive Window: Theory and Experiment},
+  shorttitle = {A Stereo Matching Algorithm with an Adaptive Window},
+  author = {Kanade, T. and Okutomi, M.},
+  year = {Sept./1994},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume = {16},
+  number = {9},
+  pages = {920--932},
+  issn = {01628828},
+  doi = {10.1109/34.310690},
+  abstract = {A central problem in stereo matching by computing correlation or sum of squared differences (SSD) lies in selecting an appropriate window size. The window size must be large enough to include enough intensity variation for reliable matching, but small enough to avoid the effects of projective distortion. If the window is too small and does not cover enough intensity variation, it gives a poor disparity estimate, because the signal (intensity \textbackslash{} ariation) to noise ratio is low. If, on the other hand, the window i\textbackslash{} too large and covers a region in which the depth of scene points (i.e., disparity) varies, then the position of maximum correlation or minimum SSD may not represent correct matching due to different projective distortions in the left and right images. For this reason, a window size must be selected adaptively depending on local variations of intensity and disparity.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\79C8SY9Q\\Kanade and Okutomi - 1994 - A stereo matching algorithm with an adaptive windo.pdf}
 }
 
 @article{kapteinComparisonCalibrationMethods2011,
@@ -3611,6 +3682,20 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\G9GE6AQG\\Sveier and Egeland - 2018 - Pose Estimation using Dual Quaternions and Moving .pdf}
 }
 
+@book{szeliskiComputerVisionAlgorithms2022,
+  title = {Computer Vision: Algorithms and Applications},
+  shorttitle = {Computer Vision},
+  author = {Szeliski, Richard},
+  year = {2022},
+  series = {Texts in Computer Science},
+  edition = {Second edition},
+  publisher = {{Springer}},
+  address = {{Cham}},
+  isbn = {978-3-030-34371-2},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\PWVYCYSJ\\Szeliski_CVAABook_2ndEd.pdf}
+}
+
 @article{tahaMetricsEvaluating3D2015,
   title = {Metrics for Evaluating {{3D}} Medical Image Segmentation: Analysis, Selection, and Tool},
   shorttitle = {Metrics for Evaluating {{3D}} Medical Image Segmentation},
@@ -3823,6 +3908,19 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\VJ3VYUNR\\Torry et al. - 2013 - High knee valgus in female subjects does not yield.pdf}
+}
+
+@book{trefethenNumericalLinearAlgebra1997,
+  title = {Numerical Linear Algebra},
+  author = {Trefethen, Lloyd N. and Bau, David},
+  year = {1997},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  address = {{Philadelphia}},
+  isbn = {978-0-89871-361-9},
+  langid = {english},
+  lccn = {QA184 .T74 1997},
+  keywords = {Algebras; Linear,Numerical calculations},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\CRR3RTTW\\Trefethen and Bau - 1997 - Numerical linear algebra.pdf}
 }
 
 @article{tsaiVolumetricModelbased2D2010,
