Adding geometric transforatmion

--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -11,6 +11,7 @@
 %\usepackage{amsrefs}%   amsrefs contains the .bibtex style content for mathematician papers.
 \usepackage{algorithmic}
 \usepackage{xcolor}
+\usepackage[framemethod=TikZ]{mdframed} %For MD Theorem
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                     User Configuration commands
