--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -14,5 +14,7 @@ Machine learning algorithms automate the process of analytical model building, u
 \input{src/1-Intro/1-1_background/kinematics-from-fluoro.tex}
 
 \section{Model-Image Registration}
+\subsection{Geometric Transformations}
+\input{src/1-Intro/1-2_model-image-registraion/geometric-transformations.tex}
 \subsection{Image Similarity Metrics}
 \input{src/1-Intro/1-2_model-image-registraion/image-similarity-metrics.tex}
