--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -832,6 +832,19 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\M5R7WJL7\\Corke_2017_Robotics, Vision and Control.pdf}
 }
 
+@book{craneKinematicAnalysisRobot2008,
+  title = {Kinematic Analysis of Robot Manipulators},
+  author = {Crane, Carl D. and Duffy, Joseph},
+  year = {2008},
+  edition = {Digitally printed version},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge, U.K.}},
+  isbn = {978-0-521-57063-3},
+  langid = {english},
+  annotation = {OCLC: 183260583},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\CLDVAU6Z\\Carl D. Crane III, Joseph Duffy - Kinematic Analysis of Robot Manipulators (1998).pdf}
+}
+
 @article{daemsValidationThreedimensionalTotal2016,
   title = {Validation of Three-Dimensional Total Knee Replacement Kinematics Measurement Using Single-Plane Fluoroscopy},
   author = {Daems, R. and Victor, Jan and De Baets, Patrick and Van Onsem, S. and Verstraete, Matthias},
